--- a/docker-images/apache-php-image/content/index.html
+++ b/docker-images/apache-php-image/content/index.html
@@ -73,7 +73,8 @@
             <div class="header-content-inner">
                 <h1>Welcome to RES courses</h1>
                 <hr>
-                <p>Start here to become a skilled developper</p>
+				<p>Skilled developper spotted ! He's located at this address <br>
+				<i id="location">polny 43<br>1066 Eplaiges<br>suisse</i></p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
             </div>
         </div>
@@ -275,6 +276,9 @@
 
     <!-- Custom Theme JavaScript -->
     <script src="js/creative.js"></script>
+	
+	<!-- Custom locations loaded -->
+	<script src="js/location.js"></script>
 
 </body>
 
